--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,7 @@
         <input type="text">
         <input type="button" value="Submit">
       </form>
+      <div id="chatDiv"></div>
     </div>
   </body>
 </html>
