Refactored to match specs.

--- a/client/index.html
+++ b/client/index.html
@@ -16,19 +16,13 @@
     <div id="main">
       <h1>chatterbox</h1>
       <span>Room:</span>
-      <select>
-        <option value="lobby">Lobby</option>
-        <option value="4chan">4Chan</option>
-        <option value="lolroom">Lol Room</option>
-        <option value="room1">Room 1</option>
-        <option value="iOS test">iOS Test</option>
-        <option value="">Empty</option>
+      <select id="roomSelect">
       </select>
       <form> 
-        <input type="text">
-        <input type="button" value="Submit">
+        <input id ="input" type="text">
+        <input id="button" type="button" value="Submit">
       </form>
-      <div id="chatDiv"></div>
+      <div id="chats"></div>
     </div>
   </body>
 </html>
